--- a/redirect.html
+++ b/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs412699_minhati_com_br/EeYDVMHgAvhOoRe--Nek0QUBNjIKD8UbT-q1R_iY330uTw?e=S4GUzT" />
+    <meta http-equiv="refresh" content="0; url=ms-excel:ofe|u|https://minhaticloud-my.sharepoint.com/:x:/g/personal/cs412699_minhati_com_br/EQZTVLI2SfFGqBIuO-XEQjsBmPJeIfSyWA50oSrws_8RUw?e=iVjzMi" />
     <title>Redirecionando...</title>
 </head>
 <body>
